feat: Add Cloudflare Workflows for durable LINC Agents operations
- Created Cloudflare Workflows implementation with 3 durable workflows:
  * ClaimsWorkflow - AI-powered claims rejection analysis
  * AuditWorkflow - CHI audit simulation with corrective actions
  * LearningWorkflow - Personalized learning path generation

- Each workflow has:
  * Multiple durable steps with automatic retry
  * State persistence across steps
  * Bilingual support (Arabic/English)
  * D1 database integration

- Deployed to: https://givc-linc-workflows.brainsait-fadil.workers.dev

- Also includes Containers setup (requires Docker for deployment):
  * Dockerfile for Python FastAPI container
  * docker-compose.yml for self-hosted deployment
  * Container worker configuration

Workflows available:
- claims-workflow
- audit-workflow
- learning-workflow

--- a/backend/workflows/package.json
+++ b/backend/workflows/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "givc-linc-agents-container",
+  "name": "givc-linc-workflows",
   "version": "1.0.0",
-  "description": "GIVC Core Academy + LINC Agents on Cloudflare Containers",
+  "description": "GIVC Core Academy + LINC Agents using Cloudflare Workflows",
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "dev": "wrangler dev",
-    "build": "tsc",
     "deploy": "wrangler deploy",
     "logs": "wrangler tail",
-    "types": "wrangler types"
+    "types": "wrangler types",
+    "workflows:list": "wrangler workflows list",
+    "workflows:instances": "wrangler workflows instances list"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20241218.0"
