--- a/backend/containers/container_src/Dockerfile
+++ b/backend/containers/container_src/Dockerfile
@@ -1,7 +1,6 @@
-# GIVC Core Academy + LINC Agents - Production Container
+# GIVC Core Academy + LINC Agents - Container Image
 FROM python:3.11-slim
 
-# Set working directory
 WORKDIR /app
 
 # Install system dependencies
@@ -11,20 +10,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Copy requirements first for better caching
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
 
-# Set environment variables
+# Environment variables
 ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV APP_ENV=production
 ENV PORT=8080
 
-# Expose port
+# Expose port 8080 (required for Cloudflare Containers)
 EXPOSE 8080
 
 # Health check
