feat: Deploy Hybrid Container Worker and Update Frontend Config
1. Deployed 'givc-linc-agents-container' using the verified registry image (c6f5c165).
2. Updated Container Worker to support Cloudflare Workflows integration (Hybrid mode).
    - Routes /api/workflows/* to Cloudflare Workflows
    - Routes other traffic to the container
3. Updated frontend/next.config.mjs with new API URLs:
    - NEXT_PUBLIC_LINC_AGENTS_URL
    - NEXT_PUBLIC_CONTAINER_API_URL

--- a/backend/containers/wrangler.jsonc
+++ b/backend/containers/wrangler.jsonc
@@ -10,7 +10,7 @@
     "containers": [
         {
             "class_name": "LincContainer",
-            "image": "./container_src/Dockerfile",
+            "image": "registry.cloudflare.com/brainsait-linc-platform-masterlinccontainer:c6f5c165",
             "max_instances": 5
         }
     ],
@@ -28,6 +28,26 @@
                 "LincContainer"
             ],
             "tag": "v1"
+        }
+    ],
+    "workflows": [
+        {
+            "name": "claims-workflow",
+            "binding": "CLAIMS_WORKFLOW",
+            "class_name": "ClaimsWorkflow",
+            "script_name": "givc-linc-workflows"
+        },
+        {
+            "name": "audit-workflow",
+            "binding": "AUDIT_WORKFLOW",
+            "class_name": "AuditWorkflow",
+            "script_name": "givc-linc-workflows"
+        },
+        {
+            "name": "learning-workflow",
+            "binding": "LEARNING_WORKFLOW",
+            "class_name": "LearningWorkflow",
+            "script_name": "givc-linc-workflows"
         }
     ],
     "d1_databases": [
